# medical_delivery_robot

./: package.xml  setup.cfg  setup.py
config/: display.rviz  slam.rviz  slam_params.yaml
launch/: display.launch.py  gazebo.launch.py  hospital_moving.launch.py  hospital_slam.launch.py  hospital_static.launch.py  random_actors.launch.py  robot_move.launch.py  slam.launch.py  test.launch.py
medical_delivery_robot/: robot_move.py  robot_move_enhanced.py
meshes/: base_link.stl  camera_base_1.stl  caster_nut_1.stl  caster_nut_2_1.stl  caster_nut_3_1.stl  caster_nut_4_1.stl  caster_wheel_1.stl  caster_wheel_2_1.stl  caster_wheel_3_1.stl  caster_wheel_4_1.stl  caster_wheel_plate_1.stl  caster_wheel_plate_2_1.stl  caster_wheel_plate_3_1.stl  caster_wheel_plate_4_1.stl  cover_lcd_back_1.stl  cover_lcd_front_1.stl  emergency_button_v1_1.stl  front_cover_body_1.stl  lcd_display_1.stl  left_wheel_1.stl  lidar_camera_1.stl  middle_cover_body_1.stl  plate_serve_1.stl  right_wheel_1.stl  standof_serve_plate_left_1.stl  standoff_serve_plate_right_1.stl  top_cover_body_1.stl  wheel_hex_1.stl  wheel_hex_2_1.stl  wheel_hex_3_1.stl  wheel_hex_4_1.stl
urdf/: materials.xacro  medical_delivery.gazebo  medical_delivery.trans  medical_delivery.xacro
worlds/: actor_test.world  hospital_moving_actors.world  hospital_static_human.world  random_actors.world
