<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>medical_delivery_robot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="youremail@domain.com">bykamri</maintainer>
  <license>TODO: License declaration</license>

  <depend>xacro</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>nav2_bringup</depend>
  <depend>nav2_common</depend>
  <depend>navigation2</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_lifecycle_manager</depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
